// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`design-system/Tabs AvecBeaucoupOnglets smoke-test 1`] = `
<div class>
  <ul class="inline-flex flex-wrap gap-y-6 justify-center rounded-lg bg-grey-2 p-2 gap-3 md:gap-6 w-full !list-none"
      role="tablist"
  >
    <li role="presentation"
        class="p-0"
    >
      <button class="px-3 py-1 font-bold w-max hover:rounded-md hover:shadow-button hover:!bg-primary-2 hover:text-primary-9 text-md text-primary-10"
              type="button"
              role="tab"
              id="tab-0"
              aria-selected="false"
      >
        <span class="ri-lock-fill font-normal text-center h-5 w-5 text-[1.25rem] leading-[1.25rem] mr-1">
        </span>
        Onglet 1
      </button>
    </li>
    <li role="presentation"
        class="p-0"
    >
      <button class="px-3 py-1 font-bold w-max hover:rounded-md hover:shadow-button hover:!bg-primary-2 hover:text-primary-9 text-md border border-grey-3 rounded-md shadow-button bg-white text-primary-9"
              type="button"
              role="tab"
              id="tab-1"
              aria-selected="true"
      >
        <span class="ri-user-line font-normal text-center h-5 w-5 text-[1.25rem] leading-[1.25rem] mr-1">
        </span>
        Onglet 2
      </button>
    </li>
    <li role="presentation"
        class="p-0"
    >
      <button class="px-3 py-1 font-bold w-max hover:rounded-md hover:shadow-button hover:!bg-primary-2 hover:text-primary-9 text-md text-primary-10"
              type="button"
              role="tab"
              id="tab-2"
              aria-selected="false"
      >
        <span class="ri-chat-1-line font-normal text-center h-5 w-5 text-[1.25rem] leading-[1.25rem] mr-1">
        </span>
        Onglet 3
      </button>
    </li>
    <li role="presentation"
        class="p-0"
    >
      <button class="px-3 py-1 font-bold w-max hover:rounded-md hover:shadow-button hover:!bg-primary-2 hover:text-primary-9 text-md text-primary-10"
              type="button"
              role="tab"
              id="tab-3"
              aria-selected="false"
      >
        <span class="ri-lock-fill font-normal text-center h-5 w-5 text-[1.25rem] leading-[1.25rem] mr-1">
        </span>
        Onglet 4
      </button>
    </li>
    <li role="presentation"
        class="p-0"
    >
      <button class="px-3 py-1 font-bold w-max hover:rounded-md hover:shadow-button hover:!bg-primary-2 hover:text-primary-9 text-md text-primary-10"
              type="button"
              role="tab"
              id="tab-4"
              aria-selected="false"
      >
        <span class="ri-user-line font-normal text-center h-5 w-5 text-[1.25rem] leading-[1.25rem] mr-1">
        </span>
        Onglet 5
      </button>
    </li>
    <li role="presentation"
        class="p-0"
    >
      <button class="px-3 py-1 font-bold w-max hover:rounded-md hover:shadow-button hover:!bg-primary-2 hover:text-primary-9 text-md text-primary-10"
              type="button"
              role="tab"
              id="tab-5"
              aria-selected="false"
      >
        <span class="ri-chat-1-line font-normal text-center h-5 w-5 text-[1.25rem] leading-[1.25rem] mr-1">
        </span>
        Onglet 6
      </button>
    </li>
  </ul>
  <div id="tabpanel-1"
       class
       role="tabpanel"
       aria-labelledby="tab-1"
       tabindex="1"
       label="Onglet 2"
       icon="user-line"
  >
    contenu onglet 2
  </div>
</div>
`;

exports[`design-system/Tabs AvecIcones smoke-test 1`] = `
<div class>
  <ul class="inline-flex flex-wrap gap-y-6 justify-center rounded-lg bg-grey-2 p-2 gap-3 md:gap-6 w-full !list-none"
      role="tablist"
  >
    <li role="presentation"
        class="p-0"
    >
      <button class="px-3 py-1 font-bold w-max hover:rounded-md hover:shadow-button hover:!bg-primary-2 hover:text-primary-9 text-md text-primary-10"
              type="button"
              role="tab"
              id="tab-0"
              aria-selected="false"
      >
        <span class="ri-lock-fill font-normal text-center h-5 w-5 text-[1.25rem] leading-[1.25rem] mr-1">
        </span>
        Onglet 1
      </button>
    </li>
    <li role="presentation"
        class="p-0"
    >
      <button class="px-3 py-1 font-bold w-max hover:rounded-md hover:shadow-button hover:!bg-primary-2 hover:text-primary-9 text-md border border-grey-3 rounded-md shadow-button bg-white text-primary-9"
              type="button"
              role="tab"
              id="tab-1"
              aria-selected="true"
      >
        <span class="ri-user-line font-normal text-center h-5 w-5 text-[1.25rem] leading-[1.25rem] mr-1">
        </span>
        Onglet 2
      </button>
    </li>
    <li role="presentation"
        class="p-0"
    >
      <button class="px-3 py-1 font-bold w-max hover:rounded-md hover:shadow-button hover:!bg-primary-2 hover:text-primary-9 text-md text-primary-10"
              type="button"
              role="tab"
              id="tab-2"
              aria-selected="false"
      >
        <span class="ri-chat-1-line font-normal text-center h-5 w-5 text-[1.25rem] leading-[1.25rem] mr-1">
        </span>
        Onglet 3
      </button>
    </li>
  </ul>
  <div id="tabpanel-1"
       class
       role="tabpanel"
       aria-labelledby="tab-1"
       tabindex="1"
       label="Onglet 2"
       icon="user-line"
  >
    contenu onglet 2
  </div>
</div>
`;

exports[`design-system/Tabs AvecStyles smoke-test 1`] = `
<div class>
  <ul class="inline-flex flex-wrap gap-y-6 justify-center rounded-lg bg-grey-2 p-2 gap-3 md:gap-6 w-full !list-none bg-secondary-1 mb-0 rounded-none"
      role="tablist"
  >
    <li role="presentation"
        class="p-0"
    >
      <button class="px-3 py-1 font-bold w-max hover:rounded-md hover:shadow-button hover:!bg-primary-2 hover:text-primary-9 text-md text-primary-10"
              type="button"
              role="tab"
              id="tab-0"
              aria-selected="false"
      >
        <span class="ri-lock-fill font-normal text-center h-5 w-5 text-[1.25rem] leading-[1.25rem] mr-1">
        </span>
        Onglet 1
      </button>
    </li>
    <li role="presentation"
        class="p-0"
    >
      <button class="px-3 py-1 font-bold w-max hover:rounded-md hover:shadow-button hover:!bg-primary-2 hover:text-primary-9 text-md text-primary-10"
              type="button"
              role="tab"
              id="tab-1"
              aria-selected="false"
      >
        <span class="ri-user-line font-normal text-center h-5 w-5 text-[1.25rem] leading-[1.25rem] mr-1">
        </span>
        Onglet 2
      </button>
    </li>
    <li role="presentation"
        class="p-0"
    >
      <button class="px-3 py-1 font-bold w-max hover:rounded-md hover:shadow-button hover:!bg-primary-2 hover:text-primary-9 text-md border border-grey-3 rounded-md shadow-button bg-white text-primary-9"
              type="button"
              role="tab"
              id="tab-2"
              aria-selected="true"
      >
        <span class="ri-chat-1-line font-normal text-center h-5 w-5 text-[1.25rem] leading-[1.25rem] mr-1">
        </span>
        Onglet 3
      </button>
    </li>
  </ul>
  <div id="tabpanel-2"
       class="border-2 border-secondary-1 p-4"
       role="tabpanel"
       aria-labelledby="tab-2"
       tabindex="2"
       label="Onglet 3"
       icon="chat-1-line"
  >
    contenu onglet 3
  </div>
</div>
`;

exports[`design-system/Tabs Onglet2 smoke-test 1`] = `
<div class>
  <ul class="inline-flex flex-wrap gap-y-6 justify-center rounded-lg bg-grey-2 p-2 gap-3 md:gap-6 w-full !list-none"
      role="tablist"
  >
    <li role="presentation"
        class="p-0"
    >
      <button class="px-3 py-1 font-bold w-max hover:rounded-md hover:shadow-button hover:!bg-primary-2 hover:text-primary-9 text-md text-primary-10"
              type="button"
              role="tab"
              id="tab-0"
              aria-selected="false"
      >
        Onglet 1
      </button>
    </li>
    <li role="presentation"
        class="p-0"
    >
      <button class="px-3 py-1 font-bold w-max hover:rounded-md hover:shadow-button hover:!bg-primary-2 hover:text-primary-9 text-md border border-grey-3 rounded-md shadow-button bg-white text-primary-9"
              type="button"
              role="tab"
              id="tab-1"
              aria-selected="true"
      >
        Onglet 2
      </button>
    </li>
    <li role="presentation"
        class="p-0"
    >
      <button class="px-3 py-1 font-bold w-max hover:rounded-md hover:shadow-button hover:!bg-primary-2 hover:text-primary-9 text-md text-primary-10"
              type="button"
              role="tab"
              id="tab-2"
              aria-selected="false"
      >
        Onglet 3
      </button>
    </li>
  </ul>
  <div id="tabpanel-1"
       class
       role="tabpanel"
       aria-labelledby="tab-1"
       tabindex="1"
       label="Onglet 2"
  >
    contenu onglet 2
  </div>
</div>
`;

exports[`design-system/Tabs OngletParDefaut smoke-test 1`] = `
<div class>
  <ul class="inline-flex flex-wrap gap-y-6 justify-center rounded-lg bg-grey-2 p-2 gap-3 md:gap-6 w-full !list-none"
      role="tablist"
  >
    <li role="presentation"
        class="p-0"
    >
      <button class="px-3 py-1 font-bold w-max hover:rounded-md hover:shadow-button hover:!bg-primary-2 hover:text-primary-9 text-md border border-grey-3 rounded-md shadow-button bg-white text-primary-9"
              type="button"
              role="tab"
              id="tab-0"
              aria-selected="true"
      >
        Onglet 1
      </button>
    </li>
    <li role="presentation"
        class="p-0"
    >
      <button class="px-3 py-1 font-bold w-max hover:rounded-md hover:shadow-button hover:!bg-primary-2 hover:text-primary-9 text-md text-primary-10"
              type="button"
              role="tab"
              id="tab-1"
              aria-selected="false"
      >
        Onglet 2
      </button>
    </li>
    <li role="presentation"
        class="p-0"
    >
      <button class="px-3 py-1 font-bold w-max hover:rounded-md hover:shadow-button hover:!bg-primary-2 hover:text-primary-9 text-md text-primary-10"
              type="button"
              role="tab"
              id="tab-2"
              aria-selected="false"
      >
        Onglet 3
      </button>
    </li>
  </ul>
  <div id="tabpanel-0"
       class
       role="tabpanel"
       aria-labelledby="tab-0"
       tabindex="0"
       label="Onglet 1"
  >
    contenu onglet 1
  </div>
</div>
`;

exports[`design-system/Tabs TailleSM smoke-test 1`] = `
<div class>
  <ul class="inline-flex flex-wrap gap-y-6 justify-center rounded-lg bg-grey-2 p-2 gap-3 md:gap-6 w-full !list-none"
      role="tablist"
  >
    <li role="presentation"
        class="p-0"
    >
      <button class="px-3 py-1 font-bold w-max hover:rounded-md hover:shadow-button hover:!bg-primary-2 hover:text-primary-9 text-sm text-primary-10"
              type="button"
              role="tab"
              id="tab-0"
              aria-selected="false"
      >
        <span class="ri-lock-fill font-normal text-center h-4 w-4 text-[1rem] leading-[1rem] mr-1">
        </span>
        Onglet 1
      </button>
    </li>
    <li role="presentation"
        class="p-0"
    >
      <button class="px-3 py-1 font-bold w-max hover:rounded-md hover:shadow-button hover:!bg-primary-2 hover:text-primary-9 text-sm border border-grey-3 rounded-md shadow-button bg-white text-primary-9"
              type="button"
              role="tab"
              id="tab-1"
              aria-selected="true"
      >
        <span class="ri-user-line font-normal text-center h-4 w-4 text-[1rem] leading-[1rem] mr-1">
        </span>
        Onglet 2
      </button>
    </li>
    <li role="presentation"
        class="p-0"
    >
      <button class="px-3 py-1 font-bold w-max hover:rounded-md hover:shadow-button hover:!bg-primary-2 hover:text-primary-9 text-sm text-primary-10"
              type="button"
              role="tab"
              id="tab-2"
              aria-selected="false"
      >
        <span class="ri-chat-1-line font-normal text-center h-4 w-4 text-[1rem] leading-[1rem] mr-1">
        </span>
        Onglet 3
      </button>
    </li>
  </ul>
  <div id="tabpanel-1"
       class
       role="tabpanel"
       aria-labelledby="tab-1"
       tabindex="1"
       label="Onglet 2"
       icon="user-line"
  >
    contenu onglet 2
  </div>
</div>
`;

exports[`design-system/Tabs TailleXS smoke-test 1`] = `
<div class>
  <ul class="inline-flex flex-wrap gap-y-6 justify-center rounded-lg bg-grey-2 p-2 gap-3 md:gap-6 w-full !list-none"
      role="tablist"
  >
    <li role="presentation"
        class="p-0"
    >
      <button class="px-3 py-1 font-bold w-max hover:rounded-md hover:shadow-button hover:!bg-primary-2 hover:text-primary-9 text-xs text-primary-10"
              type="button"
              role="tab"
              id="tab-0"
              aria-selected="false"
      >
        <span class="ri-lock-fill font-normal text-center h-3.5 w-3.5 text-[0.875rem] leading-[0.875rem] mr-1">
        </span>
        Onglet 1
      </button>
    </li>
    <li role="presentation"
        class="p-0"
    >
      <button class="px-3 py-1 font-bold w-max hover:rounded-md hover:shadow-button hover:!bg-primary-2 hover:text-primary-9 text-xs border border-grey-3 rounded-md shadow-button bg-white text-primary-9"
              type="button"
              role="tab"
              id="tab-1"
              aria-selected="true"
      >
        <span class="ri-user-line font-normal text-center h-3.5 w-3.5 text-[0.875rem] leading-[0.875rem] mr-1">
        </span>
        Onglet 2
      </button>
    </li>
    <li role="presentation"
        class="p-0"
    >
      <button class="px-3 py-1 font-bold w-max hover:rounded-md hover:shadow-button hover:!bg-primary-2 hover:text-primary-9 text-xs text-primary-10"
              type="button"
              role="tab"
              id="tab-2"
              aria-selected="false"
      >
        <span class="ri-chat-1-line font-normal text-center h-3.5 w-3.5 text-[0.875rem] leading-[0.875rem] mr-1">
        </span>
        Onglet 3
      </button>
    </li>
  </ul>
  <div id="tabpanel-1"
       class
       role="tabpanel"
       aria-labelledby="tab-1"
       tabindex="1"
       label="Onglet 2"
       icon="user-line"
  >
    contenu onglet 2
  </div>
</div>
`;
